--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,6 +2,8 @@
 
 @import "tailwindcss";
 
+@import "./style-icon.css";
+
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,22 +16,27 @@
   --mid-size: calc(1rem + 0.18vw);
   --regular-size: calc(1.5rem + 0.2vw);
 
-  --title-size: calc(2.25rem + 0.15vw);
+  --subtitle-size: calc(2rem + 0.1vw): --title-size: calc(2.25rem + 0.15vw);
   --hero-title-size: calc(3rem + 0.12vw);
 
   --size-scale-factor: 0.5rem; /* 1.5rem / 3 = 0.5rem */
 
-  /* color-scheme (07 colors)*/
-  --background-primary: hsl(213, 45%, 94%);
+  /* color-scheme (08 colors)*/
+
+  /* --background-primary: hsl(213, 45%, 94%); */
+  --background-primary: hsl(300, 20%, 99%);
   --background-secondary: hsl(41, 46%, 86%);
-  --bg-main-button: hsl(345, 88%, 37%);
 
   /* --highlight-text: hsl(32, 88%, 37%); */
   --highlight-text: hsl(32, 88%, 37%);
   --link--external-btn: hsl(32, 30%, 37%);
+  --title-color: hsl(345, 88%, 37%);
 
-  --title-color: hsl(347, 48%, 30%);
+  /* neutral accent */
   --text-paragraph: hsl(0, 0%, 12%);
+  /* accent-card color */
+  --accent-color-1: hsl(300, 20%, 86%);
+  --accent-color-2: hsl(300, 20%, 80%);
 }
 
 @media screen and (min-width: 768px) {
@@ -39,6 +46,7 @@
     --mid-size: calc(1rem + 0.18vw);
     --regular-size: calc(1.5rem + 0.2vw);
 
+    --subtitle-size: calc(2rem + 0.1vw);
     --title-size: calc(2.25rem + 0.15vw);
     --hero-title-size: calc(3rem + 0.12vw);
   }
@@ -48,9 +56,10 @@
   :root {
     --mini-size: calc(0.6rem + 0.12vw);
     --cater-size: calc(0.85rem + 0.12vw);
-    --mid-size: calc(0.96rem + 0.12vw);
-    --regular-size: calc(1.25rem + 0.05vw);
+    --mid-size: calc(0.96rem + 0.1vw);
+    --regular-size: calc(1.18rem + 0.05vw);
 
+    --subtitle-size: calc(1.35rem + 0.05vw);
     --title-size: calc(2rem + 0.15vw);
     --hero-title-size: calc(2.25rem + 0.12vw);
   }
@@ -60,6 +69,7 @@ body {
   width: 100vw;
   margin: 0;
   color: var(--text-paragraph);
+  background-color: var(--background-primary);
   font-family: "Noto Sans", sans-serif;
   font-optical-sizing: auto;
   font-size: 1.25rem; /* 20px */
@@ -82,13 +92,19 @@ h2 {
 }
 
 h3 {
+  color: var(--title-color);
   font-size: var(--title-size);
   font-weight: 700;
   line-height: 1.5;
+  opacity: 0.93;
+}
+
+h3.highlighted__h3 {
+  color: var(--highlight-text);
 }
 
 h4 {
-  font-size: var(--regular-size);
+  font-size: var(--subtitle-size);
   font-weight: 700;
   line-height: 1.5;
 }
@@ -97,15 +113,16 @@ h5 {
   font-size: var(--mid-size);
   font-weight: 300;
   line-height: 1.35;
+  letter-spacing: 1px;
 }
 
 p {
   font-size: var(--regular-size);
-  font-weight: 400;
+  /* font-weight: 400; */
   line-height: 1.6;
 }
 
-p.smaller_p {
+p.smaller__p {
   font-size: var(--mid-size);
   font-weight: 300;
   line-height: 1.6;
@@ -150,20 +167,24 @@ a.cta__button-link {
 }
 
 a.cta__button-primary {
-  color: var(--background-primary);
-  background-color: var(--bg-main-button);
+  color: var(--accent-color-1);
+  background-color: var(--title-color);
   font-size: var(--mid-size);
   font-weight: 600;
   line-height: 1.5;
   border-radius: 1.5rem;
+  z-index: 3;
 }
 
 a.cta__button-secondary {
-  color: var(--text-paragraph);
+  width: max-content;
+  padding: 0.25em 0.1em;
+  color: var(--highlight-text);
   font-size: var(--mid-size);
   font-weight: 600;
   line-height: 1.5;
-  opacity: 0.9;
+  opacity: 0.5;
+  border-bottom: 1px solid var(--highlight-text);
 }
 
 /* font families */
