--- a/client/src/style.css
+++ b/client/src/style.css
@@ -54,7 +54,7 @@
 
 @media screen and (min-width: 1160px) {
   :root {
-    --mini-size: calc(0.6rem + 0.12vw);
+    --mini-size: calc(0.64rem + 0.12vw);
     --cater-size: calc(0.85rem + 0.12vw);
     --mid-size: calc(0.96rem + 0.1vw);
     --regular-size: calc(1.18rem + 0.05vw);
@@ -141,6 +141,13 @@ span {
   line-height: 1.6;
 }
 
+label {
+  font-size: var(--mid-size);
+  font-weight: 300;
+  line-height: 1.6;
+  opacity: 0.76;
+}
+
 span.smaller__span {
   font-size: var(--cater-size);
   font-weight: 300;
@@ -167,6 +174,7 @@ a.cta__button-link {
 }
 
 a.cta__button-primary {
+  position: relative;
   color: var(--accent-color-1);
   background-color: var(--title-color);
   font-size: var(--mid-size);
@@ -177,6 +185,7 @@ a.cta__button-primary {
 }
 
 a.cta__button-secondary {
+  position: relative;
   width: max-content;
   padding: 0.25em 0.1em;
   color: var(--highlight-text);
@@ -185,6 +194,30 @@ a.cta__button-secondary {
   line-height: 1.5;
   opacity: 0.5;
   border-bottom: 1px solid var(--highlight-text);
+}
+
+input::placeholder,
+textarea::placeholder {
+  font-size: var(--mini-size);
+  font-weight: 300;
+}
+
+input {
+  width: 100%;
+  height: 2.5rem;
+  padding: 0.25rem 0.5rem;
+  font-size: var(--cater-size);
+  border-radius: 0.25rem;
+  border: 1px solid var(--accent-color-2);
+}
+
+textarea {
+  width: 100%;
+  height: 6rem;
+  padding: 0.25rem 0.5rem;
+  font-size: var(--cater-size);
+  border-radius: 0.25rem;
+  border: 1px solid var(--accent-color-2);
 }
 
 /* font families */
